--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   </head>
   <body>
     <h1>Welcome to the Lunar Weather</h1>
-    <footer>Coded by Luana Marley</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/conectomarley"> Luana Marley</a>, hosted on
+      <a href="https://github.com/conectomarley/lunarweather">GitHub</a>
+      and website hosted on
+      <a href="https://lunarweather.netlify.app/">Netlify</a>
+    </footer>
   </body>
 </html>
