update target blank

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
     <h1>Welcome to the Lunar Weather</h1>
     <footer>
       Coded by
-      <a href="https://github.com/conectomarley"> Luana Marley</a>, hosted on
-      <a href="https://github.com/conectomarley/lunarweather">GitHub</a>
+      <a href="https://github.com/conectomarley" target="_blank">
+        Luana Marley</a
+      >, hosted on
+      <a href="https://github.com/conectomarley/lunarweather" target="_blank"
+        >GitHub</a
+      >
       and website hosted on
-      <a href="https://lunarweather.netlify.app/">Netlify</a>
+      <a href="https://lunarweather.netlify.app/" target="_blank">Netlify</a>
     </footer>
   </body>
 </html>
