--- a/index.html
+++ b/index.html
@@ -3,21 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/index.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Lunar Weather</title>
   </head>
   <body>
-    <h1>Welcome to the Lunar Weather</h1>
-    <footer>
-      Coded by
-      <a href="https://github.com/conectomarley" target="_blank">
-        Luana Marley</a
-      >, hosted on
-      <a href="https://github.com/conectomarley/lunarweather" target="_blank"
-        >GitHub</a
-      >
-      and website hosted on
-      <a href="https://lunarweather.netlify.app/" target="_blank">Netlify</a>
-    </footer>
+    <div class="lunar-app">
+      <h1>Welcome to the Lunar Weather</h1>
+      <footer>
+        Coded by
+        <a href="https://github.com/conectomarley" target="_blank">
+          Luana Marley</a
+        >, hosted on
+        <a href="https://github.com/conectomarley/lunarweather" target="_blank"
+          >GitHub</a
+        >
+        and website hosted on
+        <a href="https://lunarweather.netlify.app/" target="_blank">Netlify</a>
+      </footer>
+    </div>
   </body>
 </html>
