css button updated

--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
   </head>
   <body>
     <div class="lunar-app">
+      <header>
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city.."
+            required
+            class="search-form-input"
+          />
+          <input type="submit" value="search" class="search-form-button" />
+        </form>
+      </header>
       <h1>Welcome to the Lunar Weather</h1>
       <footer>
         Coded by
