--- a/index.html
+++ b/index.html
@@ -25,9 +25,19 @@
           <input type="submit" value="search" class="search-form-button" />
         </form>
       </header>
-      <h1>Welcome to the Lunar Weather</h1>
+      <main>
+        <div>
+          <h1>Sydney</h1>
+          <p>
+            Tuesday 9:22 pm, scattered clouds <br />
+            Humidity: 65%, Wind: 3.13km/h
+          </p>
+        </div>
+        <div>🌤 12˚C</div>
+      </main>
+
       <footer>
-        Coded by
+        This project was coded by
         <a href="https://github.com/conectomarley" target="_blank">
           Luana Marley</a
         >, hosted on
