--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
           <div class="weatherlunar-container">
             <div class="weatherlunar-icon">🌤</div>
-            <div class="weatherlunar-temperature">12</div>
+            <div class="weatherlunar-temperature" id="temperature">12</div>
             <div class="weatherlunar-unit">˚C</div>
           </div>
         </div>
