update city test

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <main>
         <div class="weatherlunar-data">
           <div>
-            <h1 class="weatherlunar-city" id="weatherlunar-city">Sydney</h1>
+            <h1 class="weatherlunar-city" id="city">Sydney</h1>
             <p class="weatherlunar-details">
               Tuesday 9:22 pm, scattered clouds
               <br />
