--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <main>
         <div class="weatherlunar-data">
           <div>
-            <h1 class="weatherlunar-city" id="city">Sydney</h1>
+            <h1 class="weatherlunar-city" id="city"></h1>
             <p class="weatherlunar-details">
               Tuesday 9:22 pm, scattered clouds
               <br />
@@ -39,7 +39,7 @@
           </div>
           <div class="weatherlunar-container">
             <div class="weatherlunar-icon">🌤</div>
-            <div class="weatherlunar-temperature" id="temperature">12</div>
+            <div class="weatherlunar-temperature" id="temperature"></div>
             <div class="weatherlunar-unit">˚C</div>
           </div>
         </div>
