--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
           <div>
             <h1 class="weatherlunar-city" id="city"></h1>
             <p class="weatherlunar-details">
-              Tuesday 9:22 pm, scattered clouds
+              Tuesday 9:22 pm, <span id="description"></span>
               <br />
-              Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="weatherlunar-container">
