--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
           <div>
             <h1 class="weatherlunar-city" id="city"></h1>
             <p class="weatherlunar-details">
-              Tuesday 9:22 pm, <span id="description"></span>
+              <span id="time"></span>,
+              <span id="description"></span>
               <br />
               Humidity: <strong id="humidity"></strong>, Wind:
               <strong id="wind-speed"></strong>
