--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
             </p>
           </div>
           <div class="weatherlunar-container">
-            <div class="weatherlunar-icon">🌤</div>
+            <img
+              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-day.png"
+              alt=""
+            />
+            <div class="weatherlunar-icon" />
             <div class="weatherlunar-temperature" id="temperature"></div>
             <div class="weatherlunar-unit">˚C</div>
           </div>
