--- a/index.html
+++ b/index.html
@@ -40,11 +40,7 @@
             </p>
           </div>
           <div class="weatherlunar-container">
-            <img
-              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-day.png"
-              alt=""
-            />
-            <div class="weatherlunar-icon" />
+            <div id="icon"></div>
             <div class="weatherlunar-temperature" id="temperature"></div>
             <div class="weatherlunar-unit">˚C</div>
           </div>
