update div forecast

--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@
             <div class="weatherlunar-unit">˚C</div>
           </div>
         </div>
+        <div class="lunar-forecast">
+<div class="lunar-forecast-day">
+<div class="lunar-forecast-date">Tue</div>
+<div class="lunar-forecast-icon">☀️</div>
+<div class="lunar-forecast-temperatures">
+  <div class="lunar-forecast-temperature">
+    <strong>15°</strong>
+  </div>
+  <div class="lunar-forecast-temperature">9°</div>
+  </div>
+</div>
+</div>
+        </div>
       </main>
 
       <footer>
