--- a/index.html
+++ b/index.html
@@ -66,6 +66,36 @@
               <div class="lunar-forecast-temperature">9°</div>
             </div>
           </div>
+          <div class="lunar-forecast-day">
+            <div class="lunar-forecast-date">Tue</div>
+            <div class="lunar-forecast-icon">☀️</div>
+            <div class="lunar-forecast-temperatures">
+              <div class="lunar-forecast-temperature">
+                <strong>15°</strong>
+              </div>
+              <div class="lunar-forecast-temperature">9°</div>
+            </div>
+          </div>
+          <div class="lunar-forecast-day">
+            <div class="lunar-forecast-date">Tue</div>
+            <div class="lunar-forecast-icon">☀️</div>
+            <div class="lunar-forecast-temperatures">
+              <div class="lunar-forecast-temperature">
+                <strong>15°</strong>
+              </div>
+              <div class="lunar-forecast-temperature">9°</div>
+            </div>
+          </div>
+          <div class="lunar-forecast-day">
+            <div class="lunar-forecast-date">Tue</div>
+            <div class="lunar-forecast-icon">☀️</div>
+            <div class="lunar-forecast-temperatures">
+              <div class="lunar-forecast-temperature">
+                <strong>15°</strong>
+              </div>
+              <div class="lunar-forecast-temperature">9°</div>
+            </div>
+          </div>
         </div>
       </main>
 
